# ae

./: .gitignore  Makefile  README.md  go.mod  main.go
cmd/ei2/: __init__.py  ei2.py  setup.py
cmd/ei2/ei2_cmd/: __init__.py  file.py
cmd/ei2/idevz/: __init__.py  idevz.py
cmd/esk/: go.mod  main.go
cmd/sys/: Cargo.toml
cmd/sys/.cargo/: config.toml.bak
cmd/sys/src/: main.rs
scripts/: build.sh
scripts/package/: package  package.go
