[package]
name = "sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
hostname = "0.3"
num_cpus = "1.16"
sysinfo = "0.30.13"

[[bin]]
name = "sys"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[target.x86_64-unknown-linux-musl]
rustflags = ["-C", "target-feature=+crt-static"]

